<resources>
    <string name="app_full_name">શ્રી નર્મદા ખાંડ ઉદ્યોગ સહકારી મંડળી લિ. - ધારીખેડા</string>
    <string name="login">LOGIN</string>
    <string name="user_id">User ID</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="name_guj">નામ:</string>
    <string name="zone_guj">ઝોન:</string>
    <string name="roapn_guj">રોપાણ સીઝન:</string>
    <string name="farm_measure_guj">ખેતર માપણી</string>
    <string name="serdi_form">બળેલી શેરડી નું ફોર્મ</string>
    <string name="zone_officer_guj">ઝોન ઓફિસર</string>
    <string name="pilan_season_guj">પીલાણ સીઝન</string>
    <string name="khetar_code_guj">ખેતર કોડ</string>
    <string name="mode_gaam_guj">મોજે ગામ</string>
    <string name="nondh_gaam_guj">નોંધ ગામ</string>
    <string name="sabha_name_guj">સભાસદ નામ</string>
    <string name="sabha_gaam_guj">સભાસદ ગામ</string>
    <string name="share_number">શેર સંખ્યા</string>
    <string name="gaam_code">ગામ કોડ</string>
    <string name="laam_date_guj">રોપાણ/ લામ તારીખ</string>
    <string name="laam_ropan_guj">રોપાણ/ લામ</string>
    <string name="please_wait">Please wait…</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="pavti_no_guj">પાવતી નંબર</string>
    <string name="vistar_guj">વિસ્તાર(એકર. ગુંઠા)</string>
    <string name="vistar_only_guj">વિસ્તાર</string>
    <string name="kul_vistar_guj">કુલ વિસ્તાર(એકર. ગુંઠા)</string>
    <string name="item_name_guj">આઈટમ નામ/ નંબર</string>
    <string name="piyat_sadhan_guj">પિયત સાધન</string>
    <string name="sarve_no_guj">સર્વે નંબર</string>
    <string name="serdi_jaat_guj">શેરડી ની જાત</string>
    <string name="start_guj">ચાલુ કરો</string>
    <string name="submit">Submit</string>
    <string name="vistar_maap">વિસ્તાર માપ</string>
    <string name="photo_upload_guj">ફોટો અપલોડ કરો</string>
    <string name="prakriya_purn_guj">પ્રક્રિયા પૂર્ણ કરો</string>
    <string name="view_form"><u>View Form</u></string>
    <string name="biju_form"><u>બીજો ફોર્મ ભરો </u></string>
    <string name="your_form_has_been_submitted">Your form has been submitted!</string>
    <string name="cont">Continue</string>
    <string name="rasa_light">rasa-light</string>
    <string name="rasa_regular">rasa-regular</string>
    <string name="rasa_bold">rasa-bold</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="update">Update</string>
    <string name="new_version_of_application_is_available_please_update_your_application">New version of application is available. Please update your application.</string>
    <string name="tarikh_guj">તારીખ</string>
    <string name="samay_guj">સમય</string>
    <string name="kapat_name_guj">કપાત નામ/ નંબર</string>
    <string name="serdi_bareli_tarikh_guj">શેરડી બળેલી તારીખ</string>
    <string name="paiki_barelo_vistar_guj">પૈકી બળેલો વિસ્તાર (એકર. ગુંઠા)</string>
    <string name="login_expire">Login Expired</string>
    <string name="relogin_note">Your account login session is expired. Please re-login into this device!</string>
    <string name="okay">Okay</string>
    <string name="prakriya_saru_guj">પ્રક્રિયા શરૂ કરો</string>
    <string name="vigat_guj">વિગત:</string>
    <string name="andaje_ropan_tarikh_guj">અંદાજે રોપાણ તારીખ</string>
    <string name="ropan_season_guj">રોપાણ સીઝન</string>
    <string name="sabha_code_guj">સભાસદ કોડ</string>
    <string name="khetar_name_guj">ખેતરનું નામ</string>
    <string name="biyaran_name_guj">બિયારણ નામ/ નંબર</string>
    <string name="serial_number">Serial Number</string>
    <string name="burn_form_number">Burn Form Number</string>
    <string name="north">ઉત્તર</string>
    <string name="south">દક્ષિણ</string>
    <string name="east">પૂર્વ</string>
    <string name="west">પશ્ચિમ</string>
    <string name="validate_code">કોડ ચકાસો</string>
    <string name="code_verified">કોડ વેરિફાઈડ થઈ ગયું</string>
    <string name="load_data">Load Data</string>
    <string name="select_zone_officer">કૃપા કરીને ઝોન અધિકારી પસંદ કરો</string>
    <string name="select_pilan_season">કૃપા કરીને પિલાન સિઝન પસંદ કરો</string>
    <string name="enter_valid_khetar_code">કૃપા કરીને માન્ય ખેતર કોડ દાખલ કરો</string>
    <string name="select_moje_gaam">મહેરબાની કરીને મોજે ગામ પસંદ કરો</string>
    <string name="select_nondh_gaam">કૃપા કરીને નોંધ ગામ પસંદ કરો</string>
    <string name="enter_valid_sabha_code">કૃપા કરીને માન્ય સભાસદ કોડ દાખલ કરો</string>
    <string name="select_laam_date">કૃપા કરીને લામ તારીખ પસંદ કરો</string>
    <string name="enter_khetar_code">કૃપા કરીને ખેતર નું નામ દાખલ કરો</string>
    <string name="enter_khetar_name_only_gujarati">ખેતર નું નામ માત્ર ગુજરાતી ભાષામાં જ લખવાની છૂટ છે</string>
    <string name="select_item_name">કૃપા કરીને આઇટમ પસંદ કરો</string>
    <string name="select_piyat_sadhan">કૃપા કરીને પિયત સાધન પસંદ કરો</string>
    <string name="enter_serial_number">કૃપા કરીને સીરીયલ નંબર દાખલ કરો</string>
    <string name="select_biyaran">કૃપા કરીને બિયારણ પસંદ કરો</string>
    <string name="fetch_details">માહિતી મેળવો</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="please_select_khetar_image">કૃપા કરીને ખેતરની છબી પસંદ કરો</string>
    <string name="select_date">કૃપા કરીને તારીખ પસંદ કરો</string>
    <string name="select_time">કૃપા કરીને સમય પસંદ કરો</string>
    <string name="get_details_using_khetar_code">કૃપા કરીને ખેતર કોડનો ઉપયોગ કરીને વિગતો મેળવો</string>
    <string name="enter_barelo_vistar">કૃપા કરીને બરેલો વિસ્તાર દાખલ કરો</string>
    <string name="enter_serdi_bareli_date">કૃપા કરીને સેરડી બરેલી તારીખ પસંદ કરો</string>
    <string name="select_kapat_name_no">કૃપા કરીને કપાત નામ/નંબર પસંદ કરો</string>
    <string name="enter_burn_form_number">કૃપા કરીને બર્ન ફોર્મ નંબર દાખલ કરો</string>
    <string name="press_again_to_exit">Press again to Exit</string>
    <string name="your_data_will_be_loose_when_press_on_continue_button">Your data will be loose when press on continue button</string>
    <string name="offline_khetar_mapni">ઑફ્લાઈન ખેતર માપણી</string>
    <string name="attendance">હાજરી</string>
    <string name="mapni_photo">માપણી ફોટો</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="out_time">OUT TIME</string>
    <string name="in_time">IN TIME</string>
    <string name="hajri_samay">હાજરી સમય</string>
    <string name="title_dnd_permission">DND પરવાનગી આપો</string>
    <string name="message_dnd_permission">મોબાઇલ સેટિંગ્સ માંથી DND પરવાનગીની મંજૂરી આપો\n\nનોંધ: ફોન કૉલ્સ અને સૂચનાઓને મ્યૂટ કરવા માટે DND પરવાનગી જરૂરી છે.</string>
    <string name="note_dnd_permission">નોંધ: ફોન કૉલ્સ અને સૂચનાઓને મ્યૂટ કરવા માટે DND પરવાનગી જરૂરી છે.</string>
    <string name="allow_dnd_permission">પરવાનગી આપો</string>
    <string name="denied_dnd_permission"><u>પરવાનગી વગર ચાલુ રાખો</u></string>
    <string name="ask_dnd_title">Do Not Disturb (DND)</string>
    <string name="ask_dnd_message">શું તમે DND શરૂ કરવા માંગો છો? કૃપા કરીને <b>શરુ કરો</b> બટન પર ક્લિક કરો. અન્યથા, તમે <b>DND વગર શરુ કરો</b> પર ક્લિક કરી શકો છો.</string>
    <string name="ask_dnd_yes">શરુ કરો</string>
    <string name="ask_dnd_no"><u>DND વગર શરુ કરો</u></string>
    <string name="dnd_started">DND મોડ શરૂ કર્યો</string>
    <string name="dnd_stopped">DND મોડ બંધ કર્યો</string>
    <string name="check_internet_connection">કૃપા કરીને ઇન્ટરનેટ કનેક્શન તપાસો!</string>
    <string name="delete_guj">ડીલીટ</string>
    <string name="mapni_mapping_guj">માપણી\nમેપીંગ</string>
    <string name="navi_mapni">નવી માપણી</string>
    <string name="no_history">કોઈ ઈતિહાસ મળ્યો નથી</string>
    <string name="are_you_sure_you_want_to_delete_the_form">Are you sure you want to delete\n the form?</string>
    <string name="yes">Yes</string>
    <string name="go_back"><u>Go back</u></string>
    <string name="please_select_profile">કૃપા કરીને તમારો ચહેરો ઓળખો</string>
    <string name="please_wait_fetching_location">મહેરબાની કરી રાહ જુવો, સ્થાન મેળવી રહ્યું છે</string>
    <string name="year_list_not_found">વર્ષની યાદી મળી નથી</string>
    <string name="please_login">કૃપા કરીને લૉગિન કરો</string>
    <string name="continue_mapni_to_complete">પૂરતા સ્થાનો મળ્યા નથી! પ્રક્રિયા પૂર્ણ કરવા માટે ચાલો</string>
    <string name="share_file">Share File</string>
    <string name="pani_bandh_register">પાણી બંધ રજીસ્ટર</string>
    <string name="bareli_serdi_report">બળેલી શેરડી રિપોર્ટ</string>
    <string name="khetar_mapni_gaam_list">ખેતર માપણી ગામ નું લિસ્ટ</string>
    <string name="ropan_register">રોપાણ રજીસ્ટર</string>
    <string name="from">From :</string>
    <string name="to">To :</string>
    <string name="supervisor">સુપરવાઈઝર</string>
    <string name="zone">ઝોન</string>
    <string name="gaam">ગામ</string>
    <string name="item_and_gaam">આઈટમ અને ગામ</string>
    <string name="download">ડાઉનલોડ</string>
    <string name="village_name">Village Name</string>
    <string name="total_area">Total Area</string>
    <string name="count">Count</string>
    <string name="group_type">ગ્રુપ પ્રકાર</string>
    <string name="item">આઈટમ</string>
    <string name="sabhasad_mahiti">સભાસદ ની માહિતી</string>
    <string name="sabhasad_mahiti_badalo">સભાસદ ની માહિતી બદલો</string>
    <string name="mobile_number">મોબાઈલ નંબર</string>
    <string name="valid_mobile_number">કૃપા કરીને 10 અંકનો મોબાઇલ નંબર દાખલ કરો</string>
    <string name="kapni_puri_aheval">કાપણી પુરી થયા નો અહેવાલ</string>
    <string name="pani_bandh_yadi">પાણી બંધ યાદી</string>
    <string name="serdi_delivery_chalan">શેરડી ડિલિવરી ચલણ</string>
    <string name="serdi_delivery_history">શેરડી ડિલિવરી ચલણ ની માહિતી</string>
    <string name="slip_number">સ્લિપ નંબર</string>
    <string name="sankad">સાંકળ</string>
    <string name="vahan_number">વાહન નંબર</string>
    <string name="vahan_number_one">વાહન નંબર 1</string>
    <string name="mukadam_number">મુકાદમ નામ / નંબર</string>
    <string name="fetch">Fetch</string>
    <string name="moje_gaam">મોજે ગામ</string>
    <string name="moje_gaam_code">મોજે ગામ કોડ</string>
    <string name="driver_name">ડ્રાઈવર નું નામ</string>
    <string name="sabhasad_gaam_code">સભાસદ ગામ કોડ</string>
    <string name="sabha_number_guj">સભાસદ નંબર</string>
    <string name="kapni_report_number">કાપણી રિપોર્ટ નંબર</string>
    <string name="agri_receipt_number">એગ્રી રસીદ નં.</string>
    <string name="agri_rasid_number">મેન્યુઅલ રસીદ નં.</string>
    <string name="agri_receipt_date">એગ્રી રસીદ તારીખ</string>
    <string name="vehicle_number">વાહન નંબર</string>
    <string name="vehicle_type">વાહન પ્રકાર</string>
    <string name="vehicle_type_one">વાહન પ્રકાર 1</string>
    <string name="village_code">મુ. કોડ</string>
    <string name="type">પ્રકાર</string>
    <string name="net_weight">નેટ વજન</string>
    <string name="cumulative_weight">ક્યુમીલીટીવ વજન</string>
    <string name="verify_submit">Verify and Submit</string>
    <string name="mahiti_medvo">માહિતી મેળવો</string>
    <string name="gaam_code_number">ગામ કોડ નંબર</string>
    <string name="serdi_prakar">શેરડી નો પ્રકાર</string>
    <string name="khetar_ander_avano_samay">ખેતર માં અંદર આવાનો સમય</string>
    <string name="khetar_ravana_thavano_samay">ખેતર માંથી રવાના થવાનો સમય</string>
    <string name="kapni_puri_thayani_tarikh">કાપણી પુરી થવાની તારીખ</string>
    <string name="pilan_season_error">Add a new entry for the pilan season or select the appropriate respective ropan season.</string>
    <string name="pilan_season_locked_error">Pilan season is locked. Cannot add khetar mapni record.</string>
    <string name="note_sabhasad_mahiti_update">નોંધ : કૃપા કરીને નીચેની સૂચિમાંથી અન્ય સભાસદને પણ પસંદ કરો જેના માટે મોબાઈલ નંબર સુધારવા હોય.</string>
    <string name="select_or_search_items">Select or Search Items</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
</resources>