<?xml version="1.0" encoding="UTF-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/_280sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginEnd="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/rasa_bold"
            android:gravity="center"
            android:text="@string/ask_dnd_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="@font/rasa_regular"
            android:gravity="center"
            android:text="@string/ask_dnd_message"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <RelativeLayout
            android:id="@+id/btn_enable_dnd"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_45sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/button_circle_green"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/rasa_regular"
                android:gravity="center"
                android:text="@string/ask_dnd_yes"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/btn_disable_dnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_12sdp"
            android:fontFamily="@font/rasa_regular"
            android:gravity="center"
            android:text="@string/ask_dnd_no"
            android:textColor="@color/black"
            android:textSize="@dimen/_14sdp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_close"
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_35sdp"
        android:layout_gravity="end"
        android:src="@drawable/ic_circle_close" />
</FrameLayout>
