<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.khetarmapni_offline.view.OfflineMapniListActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_simple" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:background="@drawable/border_grey"
            android:orientation="horizontal">

            <TextView
                style="@style/InternSemiBold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/khetar_code_guj"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/border" />

            <TextView
                style="@style/InternSemiBold"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_8sdp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/sabha_code_guj"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <View
                android:layout_width="@dimen/_1sdp"
                android:layout_height="match_parent"
                android:background="@color/border" />

            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/InternSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/delete_guj"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    tools:ignore="NestedWeights" />

                <TextView
                    style="@style/InternSemiBold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:maxLines="2"
                    android:text="@string/mapni_mapping_guj"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_mapni"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/card_new"
            android:layout_below="@+id/linear_title"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            tools:listitem="@layout/item_mapni_list" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_new"
            android:layout_width="@dimen/_95sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/_12sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:elevation="@dimen/_4sdp"
            app:cardBackgroundColor="@color/card_back"
            app:cardCornerRadius="@dimen/_12sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_12sdp"
                    android:layout_height="@dimen/_12sdp"
                    android:gravity="center_vertical"
                    android:src="@drawable/ic_in"
                    android:tint="@color/primary" />

                <TextView
                    style="@style/InternSemiBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/navi_mapni"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_12sdp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_no_history"
            style="@style/InternRegular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_4sdp"
            android:maxLines="1"
            android:text="@string/no_history"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:visibility="gone" />

    </RelativeLayout>

</LinearLayout>