<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/spinerTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rasa_bold"
            android:text="@string/select_or_search_items"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6sdp"
            android:background="@drawable/rounded_border_edittext"
            android:gravity="center|left"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/searchIcon"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:src="@drawable/ic_search_black_36dp" />

            <EditText
                android:id="@+id/searchBox"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_36sdp"
                android:layout_marginLeft="@dimen/_6sdp"
                android:background="#00000000"
                android:fontFamily="@font/rasa_regular"
                android:hint="શોધવા માટે ટેક્સ્ટ દાખલ કરો..."
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/card_shadow_1"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_select_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="@dimen/_6sdp">

            <ImageView
                android:id="@+id/checkbox_select_all"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:layout_marginEnd="@dimen/_12sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rasa_regular"
                android:gravity="center|left"
                android:text="@string/select_all"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            android:divider="#d1d1d1"
            android:dividerHeight="0.1dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/rasa_bold"
                android:padding="5dp"
                android:text="@string/cancel"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:fontFamily="@font/rasa_bold"
                android:padding="5dp"
                android:text="@string/save"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>